objects/Status_IO_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Applies_Range__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aplica Rango</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IdIO__c</fullName>
        <label>Dispositivo IO</label>
        <referenceTo>IO__c</referenceTo>
        <relationshipName>ConfiguracionesIO1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IdStatus__c</fullName>
        <label>Estado</label>
        <referenceTo>Status__c</referenceTo>
        <relationshipLabel>Configuraciones Estado/IO</relationshipLabel>
        <relationshipName>Status_IO_Configurations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Valor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Test_Results</valueSetName>
        </valueSet>
    </fields>
    <label>Configuración Estado/IO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>IdIO__c</columns>
        <columns>IdStatus__c</columns>
        <columns>Applies_Range__c</columns>
        <columns>Min__c</columns>
        <columns>Max__c</columns>
        <columns>Value__c</columns>
        <columns>Is_Active__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Threshold_Configuration</fullName>
        <columns>IdIO__c</columns>
        <columns>IdStatus__c</columns>
        <columns>Applies_Range__c</columns>
        <columns>Min__c</columns>
        <columns>Max__c</columns>
        <columns>Value__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>Parametrización de Umbrales</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CFG-{0000}</displayFormat>
        <label>Status IO Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuraciones Estado/IO</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>